# android_kernel_gs201

./: .gitignore  Kbuild  Kconfig  Makefile
Documentation/admin-guide/: kernel-parameters.txt
android/: abi_gki_aarch64.stg.allowed_breaks  abi_gki_aarch64_bcmstb  abi_gki_aarch64_mtk  abi_gki_aarch64_pixel  abi_gki_aarch64_qcom  abi_gki_aarch64_rockchip  abi_gki_aarch64_vivo  abi_gki_aarch64_xiaomi  abi_gki_protected_exports_aarch64
arch/x86/: Kconfig
block/: bio.c
drivers/android/: binder.c  vendor_hooks.c
drivers/cpufreq/: cpufreq.c  freq_table.c
drivers/iommu/: dma-iommu.c
drivers/md/: dm-table.c
drivers/pci/: probe.c
drivers/remoteproc/: remoteproc_core.c
drivers/scsi/: storvsc_drv.c
fs/: binfmt_elf.c  file.c  userfaultfd.c
fs/ext4/: inode.c  super.c
fs/f2fs/: dir.c  f2fs.h  file.c  inode.c  segment.c  super.c  sysfs.c
fs/fuse/: dir.c
fs/ntfs3/: ntfs_fs.h
fs/proc/: base.c  task_mmu.c
google-devices/gs201/: BUILD.bazel  Kconfig.ext.gs201  build.config.gs201  device.bazelrc  gs201_defconfig  system_dlkm.props.gs201  vendor_dlkm.props.gs201  vendor_ramdisk.modules.gs201
google-devices/gs201/dts/: gs201-cloudripper-battery.dtsi  gs201-cloudripper-bcl.dtsi  gs201-common-typec.dtsi  gs201-isp.dtsi  gs201-pantah-charging.dtsi  gs201.dtsi
google-devices/gs201/insmod_cfg/: init.insmod.lynx.cfg
google-devices/lynx/: BUILD.bazel  device.bazelrc
google-devices/pantah/: BUILD.bazel  build_pantah.sh  device.bazelrc  pantah_defconfig
google-devices/pantah/dts/: gs201-cheetah-battery.dtsi  gs201-cheetah-camera.dtsi  gs201-cheetah-common.dtsi  gs201-cloudripper-audio.dtsi  gs201-cloudripper-camera-av5.dtsi  gs201-cloudripper-charging.dtsi  gs201-cloudripper-wcharger.dtsi  gs201-pantah-wcharger.dtsi  gs201-panther-battery.dtsi  gs201-panther-camera.dtsi  gs201-panther-common.dtsi  gs201-ravenclaw-wcharger.dtsi
google-modules/: Makefile
google-modules/aoc/: BUILD.bazel  Kconfig  aoc.c  aoc.h  aoc_channel_dev.c  aoc_firmware.c  aoc_firmware.h  aoc_uwb_platform_drv.c  aoc_v1.c
google-modules/bms/: BUILD.bazel  Kconfig  Makefile  gbms_storage.h  google_battery.c  google_bms.c  google_bms.h  google_charger.c  google_eeprom.c  google_eeprom_02.c  google_ttf.c  hl7132_charger.c  max1720x_battery.c  max77729_pmic.c  max77759_charger.c  max77759_charger.h  max77779_charger.c  max77779_charger.h  max77779_fg.c  max77779_fg.h  max77779_fg_model.c  max77779_fwupdate.c  max77779_vimon_i2c.c  max_m5.c  max_m5.h  maxfg_common.c  maxfg_common.h  p9221_charger.c  p9221_charger.h  p9221_chip.c
google-modules/display/common/panel_tests/: BUILD.bazel  Kbuild  gs-panel-common-test.c
google-modules/edgetpu/janeiro/drivers/edgetpu/: BUILD.bazel  Kbuild  Makefile  edgetpu-google-iommu.c
google-modules/gxp/gs201/: BUILD.bazel  Makefile  gxp-common-platform.c
google-modules/gxp/gs201/gcip-kernel-driver/drivers/gcip/: Makefile  gcip-iommu.c
google-modules/gxp/gs201/gcip-kernel-driver/include/gcip/: gcip-config.h
google-modules/lwis/: BUILD.bazel  Kbuild  Makefile  lwis_allocator.c  lwis_buffer.c  lwis_buffer.h  lwis_bus_manager.c  lwis_bus_manager.h  lwis_commands.h  lwis_debug.c  lwis_debug.h  lwis_device.c  lwis_device.h  lwis_device_dpm.c  lwis_device_dpm.h  lwis_device_i2c.c  lwis_device_i2c.h  lwis_device_ioreg.c  lwis_device_ioreg.h  lwis_device_slc.c  lwis_device_slc.h  lwis_device_spi.c  lwis_device_test.c  lwis_device_top.c  lwis_device_top.h  lwis_dt.c  lwis_dt.h  lwis_event.c  lwis_event.h  lwis_fence.c  lwis_fence.h  lwis_i2c.c  lwis_i2c.h  lwis_interrupt.c  lwis_io_buffer.c  lwis_io_buffer.h  lwis_io_entry.c  lwis_ioctl.c  lwis_ioctl.h  lwis_ioctl_past.c  (+11 more)
google-modules/nfc/: BUILD.bazel
google-modules/power/mitigation/: BUILD.bazel  Kconfig  Makefile  OWNERS  bcl.h  google_bcl_core.c  google_bcl_data_logging.c  google_bcl_irq_mon.c  google_bcl_qos.c  google_bcl_sysfs.c  google_bcl_util.c  google_bcl_votable.c  max77759_vdroop.c  max77779_vdroop.c
google-modules/power/mitigation/Documentation/ABI/testing/: sysfs-devices-virtual-mitigation
google-modules/power/mitigation/Documentation/devicetree/bindings/power/mitigation/: google_bcl.yaml
google-modules/power/mitigation/uapi/: brownout_stats.h
google-modules/radio/samsung/s5300/: BUILD.bazel  Kbuild  cpif_tp_monitor.c  dit.c  link_device.c  link_rx_pktproc.c  link_rx_zerocopy.c  modem_argos_notifier.c  modem_main.c  modem_prj.h  modem_utils.c
google-modules/touch/common/: BUILD.bazel  Kbuild  Kconfig  Makefile  goog_touch_interface.c  goog_touch_interface.h  touch_offload.c
google-modules/touch/common/include/uapi/input/: touch_offload.h
google-modules/touch/common/usi/: BUILD.bazel  Kbuild  Makefile
google-modules/touch/focaltech/ft3683u/: BUILD.bazel  Kbuild  Makefile  focaltech_common.h  focaltech_config.h  focaltech_core.c  focaltech_core.h  focaltech_ex_fun.c  focaltech_flash.c  focaltech_goog.c  focaltech_spi.c
google-modules/touch/focaltech/ft3683u/focaltech_test/: focaltech_test.c  focaltech_test.h  focaltech_test_ini.c  focaltech_test_ini.h
google-modules/trusty/: BUILD.bazel
include/linux/: bpf.h  cpufreq.h  fs.h  hrtimer.h  io_uring_types.h  ipv6.h  memcontrol.h  perf_event.h  rcupdate.h
include/net/: xfrm.h
init/: Kconfig
io_uring/: io_uring.c
kernel/: Makefile  fork.c
kernel/bpf/: core.c  syscall.c
kernel/cgroup/: cgroup.c
kernel/events/: core.c  ring_buffer.c
kernel/module/: Kconfig
kernel/printk/: printk.c
kernel/sched/: core.c  fair.c  vendor_hooks.c
kernel/time/: hrtimer.c
kernel/trace/: bpf_trace.c  trace.c  trace.h  trace_events.c
mm/: Kconfig  filemap.c  gup.c  huge_memory.c  hugetlb.c  memcontrol.c  memfd-ashmem-shim.c  memory.c  migrate.c  page_alloc.c  rmap.c  userfaultfd.c  vmalloc.c  vmscan.c
net/bluetooth/: l2cap_core.c  mgmt.c
net/core/: filter.c
net/ipv4/: tcp.c  tcp_input.c  udp.c  udp_offload.c
net/ipv6/: addrconf.c  route.c
net/sched/: sch_api.c  sch_htb.c
net/sctp/: socket.c
net/unix/: af_unix.c
net/vmw_vsock/: af_vsock.c
net/wireless/: core.c
net/xfrm/: xfrm_state.c
scripts/: Makefile.build
(+434 files in other folders)
