# SPDX-License-Identifier: GPL-2.0-or-later

load("//build/kernel/kleaf:kernel.bzl", "kernel_module")

kernel_module(
    name = "edgetpu.janeiro",
    srcs = glob([
        "**/*.c",
        "**/*.h",
    ]) + [
        "Kbuild",
        "//private/google-modules/power/mitigation:headers",
        "//private/google-modules/soc/gs:gs_soc_headers",
    ],
    outs = [
        "janeiro.ko",
    ],
    kernel_build = "//private/devices/google/common:kernel",
    visibility = [
        "//private/devices/google:__subpackages__",
        "//private/google-modules/gxp/gs201:__pkg__",
        "//private/google-modules/soc/gs:__pkg__",
    ],
    deps = [
        "//private/google-modules/power/mitigation:bcl",
        "//private/google-modules/soc/gs:gs_soc_module",
    ],
)
